2003-11-01  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* configure.in:
	increase version to 2.5.9

2003-10-31  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	fixed deb creation

	* configure.in:
	* NEWS:
	updated for 2.5.8 release

2003-10-29  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	* configure.in:
	initially added files for deb package auto-creating procedure

2003-10-26  Mikhael Goikhman  <migo@homemail.com>

	* AUTHORS:
	* configure.in:
	added Swedish translations by Johan Svedberg

	* NEWS:
	updated

2003-10-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/add_window.c (GetWindowSizeHints):
	reindented broken hint messages

2003-10-23  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	improved Perl detection messages,
	restored FvwmGtkDebug independence from gtk libs

2003-10-15  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* AUTHORS:
	added German translations by Andrei Mitrofanow

	* fvwm/fvwm.1.in:
	typos

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	added 2.4.17 NEWS

2003-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	* fvwm/conditional.c (CreateConditionMask):
	(MatchesConditionMask):
	(CreateConditionMask):
	* fvwm/fvwm.h (WindowConditionMask):
	!CurrentPage, !CurrentDesk, !Layer ... now work as they should

2003-09-23  olicha  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmInit):
	Removed debug code

2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (warp_to_fvwm_window):
	don't unnecessarily call MoveViewport

2003-09-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (__is_resize_allowed):
	fixed a condition

2003-09-06  malu  <ml@update.uu.se>

	* libs/FBidi.c (FBidiConvert):
	* libs/CombineChars.c (CombineChars):
	Fixed drawing combining characters on correct positions in
	right-to-left context

2003-09-05  malu  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawString):
	(FlocaleTextWidth):